feat(apiKey): add a status for api key and method to update it
